# cms_contest

./: .gitignore  CMakeLists.txt  README.md  contest.yaml
DAQ_01_GeneralFramework/: task.yaml
DAQ_GeneralFramework/: task.yaml
DAQ_framework/: CMakeLists.txt  task.yaml
cms/: cms.proxy.conf  start_cms.sh  stop_cms.sh
common/: GenerateTaskTargets.cmake  prism.theme
daq_binary_leds/: CMakeLists.txt  task.yaml
daq_binaryleds/: input03.txt  task.yaml
daq_clock/: CMakeLists.txt  task.yaml
daq_digitizer/: task.yaml
daq_framework/: CMakeLists.txt  task.yaml
daq_indicator/: task.yaml
daq_rotate_leds/: task.yaml
daq_rotateleds/: task.yaml
daq_slider/: task.yaml
daq_temperature/: task.yaml
daq_timing/: CMakeLists.txt  task.yaml
daq_timing/attachments/: DAQlibTerminalTiming.c  daq_timing.c
daq_timing/input/: generator.c  input00.txt  input01.txt  input02.txt  input03.txt
daq_timing/managers/: grader.c  time.h
daq_timing/output/: output00.txt  output01.txt  output02.txt  output03.txt
daq_timing/solution/: daq_timing.c
daq_timing/statement/: statement.md
daq_toggle/: task.yaml
daq_traffic/: task.yaml
daq_writenegative/: task.yaml
daq_writenumber/: CMakeLists.txt  task.yaml
include/: DAQlib.h
intro_addition/: task.yaml
intro_base7/: task.yaml
intro_fileio/: task.yaml
intro_functions/: task.yaml
intro_magic/: CMakeLists.txt  task.yaml
intro_regression/: CMakeLists.txt  task.yaml
intro_search/: task.yaml
strings_palindrome/: task.yaml
strings_safestrings/: task.yaml
strings_translate/: task.yaml
template/: task.yaml
(+279 files in other folders)
